more image paths through pipeline helper

--- a/app/views/carpools/index.html.erb
+++ b/app/views/carpools/index.html.erb
@@ -178,11 +178,11 @@
 		<td>Selected Driver/Rider</td>
 	</tr>
 	<tr>
-		<td><img src="/assets/UD.png" alt="Unavailable Driver" /></td>
+		<td><img src="<%= asset_path "UD.png" %>" alt="Unavailable Driver" /></td>
 		<td>Driver with Full Car</td>
-		<td><img src="/assets/UR.png" alt="Unavailable Rider" /></td>
+		<td><img src="<%= asset_path "UR.png" %>" alt="Unavailable Rider" /></td>
 		<td>Assigned Rider</td>
-		<td><img src="/assets/AD_AR_UD_UR.png" alt="Available Driver, Available Rider, Unavailable Driver, Unavailable Rider" /></td>
+		<td><img src="<%= asset_path "AD_AR_UD_UR.png" %>" alt="Available Driver, Available Rider, Unavailable Driver, Unavailable Rider" /></td>
 		<td>Location with all four types</td>
 	</tr>
 </table>
@@ -275,7 +275,7 @@
 	</ul>
 	<ul>
 		<% @riders.each do |rider| %>
-			<li id="rider<%=rider.id%>"><%='<img src="/assets/check.png" alt="Done" title="This person has already been assigned." />'.html_safe if rider.driver_ride_id != 0%><a href="javascript:map.setCenter(riders[<%=rider.id%>]['marker'].getLatLng(), 14);showMarker(riders[<%=rider.id%>]['location'], <%=rider.id%>);" ondblclick="double_click_rider(<%=rider.id%>);return false;"><%= rider.person.full_name %></a> (<%= rider.city %>)</li>
+			<li id="rider<%=rider.id%>"><%='<img src="' + asset_path("check.png") + '" alt="Done" title="This person has already been assigned." />'.html_safe if rider.driver_ride_id != 0%><a href="javascript:map.setCenter(riders[<%=rider.id%>]['marker'].getLatLng(), 14);showMarker(riders[<%=rider.id%>]['location'], <%=rider.id%>);" ondblclick="double_click_rider(<%=rider.id%>);return false;"><%= rider.person.full_name %></a> (<%= rider.city %>)</li>
 		<% end %>
 	</ul>
 	<div style="padding:2px;margin-top:20px;">
@@ -291,9 +291,9 @@
 				<th><a href="javascript:closeDepartureTime();">X</a></th>
 			</tr>
 			<tr>
-				<td><img src="/assets/clock-icon.png" alt="clock" style="width:25px;height:25px;" />&nbsp;<select name="options_box_departure_time_time1_hour" id="options_box_departure_time_time1_hour" onchange="updateDepartureTime1(true);"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option></select><select name="options_box_departure_time_time1_minute" id="options_box_departure_time_time1_minute" onChange="updateDepartureTime1(true);"><option value="00">00</option><option value="15">15</option><option value="30">30</option><option value="45">45</option></select><select name="options_box_departure_time_time1_ampm" id="options_box_departure_time_time1_ampm" onchange="updateDepartureTime1(true);"><option value="0">AM</option><option value="12">PM</option></select></td>
+				<td><img src="<%= asset_path "check-icon.png" %>" alt="clock" style="width:25px;height:25px;" />&nbsp;<select name="options_box_departure_time_time1_hour" id="options_box_departure_time_time1_hour" onchange="updateDepartureTime1(true);"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option></select><select name="options_box_departure_time_time1_minute" id="options_box_departure_time_time1_minute" onChange="updateDepartureTime1(true);"><option value="00">00</option><option value="15">15</option><option value="30">30</option><option value="45">45</option></select><select name="options_box_departure_time_time1_ampm" id="options_box_departure_time_time1_ampm" onchange="updateDepartureTime1(true);"><option value="0">AM</option><option value="12">PM</option></select></td>
 				<td><input type="checkbox" name="options_box_departure_time_use1" id="options_box_departure_time_use1" onclick="updateDepartureTime1(false);" /></td>
-				<td><img src="/assets/clock-icon.png" alt="clock" style="width:25px;height:25px;" />&nbsp;<select name="options_box_departure_time_time2_hour" id="options_box_departure_time_time2_hour" onchange="updateDepartureTime2(true);"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option></select><select name="options_box_departure_time_time2_minute" id="options_box_departure_time_time2_minute" onChange="updateDepartureTime2(true);"><option value="00">00</option><option value="15">15</option><option value="30">30</option><option value="45">45</option></select><select name="options_box_departure_time_time2_ampm" id="options_box_departure_time_time2_ampm" onchange="updateDepartureTime2(true);"><option value="0">AM</option><option value="12">PM</option></select></td>
+				<td><img src="<%= asset_path "check-icon.png" %>" alt="clock" style="width:25px;height:25px;" />&nbsp;<select name="options_box_departure_time_time2_hour" id="options_box_departure_time_time2_hour" onchange="updateDepartureTime2(true);"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option></select><select name="options_box_departure_time_time2_minute" id="options_box_departure_time_time2_minute" onChange="updateDepartureTime2(true);"><option value="00">00</option><option value="15">15</option><option value="30">30</option><option value="45">45</option></select><select name="options_box_departure_time_time2_ampm" id="options_box_departure_time_time2_ampm" onchange="updateDepartureTime2(true);"><option value="0">AM</option><option value="12">PM</option></select></td>
 				<td><input type="checkbox" name="options_box_departure_time_use2" id="options_box_departure_time_use2" onclick="updateDepartureTime2(false);" /></td>
 			</tr>
 		</table>
@@ -320,8 +320,8 @@
 <!--<div id="options" >-->
 	<table id="options" class="room" style="position:absolute;left:6px;bottom:5px;width:495px;height:30px;">
 		<tr>
-			<td id="options_departure_time"><a href="javascript:showOption('departure_time');">Departure Time <img src="/assets/up_arrow.png" alt="arrow" /></a></td>
-			<td id="options_availability" style="background-color:#bbffbb;"><a href="javascript:showOption('availability');">Show and Hide <img src="/assets/up_arrow.png" alt="arrow" style="height:12px;width:12px;vertical-align:middle;" /></a></td>
+			<td id="options_departure_time"><a href="javascript:showOption('departure_time');">Departure Time <img src="<%= asset_path "up_arrow.png" %>" alt="arrow" /></a></td>
+			<td id="options_availability" style="background-color:#bbffbb;"><a href="javascript:showOption('availability');">Show and Hide <img src="<%= asset_path "up_arrow.png" %>" alt="arrow" style="height:12px;width:12px;vertical-align:middle;" /></a></td>
 		</tr>
 	</table>
 <!--</div>-->
